[project]
name = "comfyui-haiper-api"
description = "This custom node allows you to use the HaiperAI API."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["requests", "numpy", "pillow", "torch", "python-dotenv"]

[project.urls]
Repository = "https://github.com/Haiper-ai/ComfyUI-HaiperAI-API"

[tool.comfy]
PublisherId = "haiperai"
DisplayName = "ComfyUI-HaiperAI-API"
Icon = "https://cdnvb5.haiper.ai/public/images/logo.png"
